ISP20210981 - User 回饋調整

--- a/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
@@ -1142,6 +1142,7 @@
                         window.location.href = data.reportPath;
                     }
                     else {
+                        console.log(data.ErrorMessage);
                         msg.WithError(data.ErrorMessage);
                     }
                 },
