--- a/Quality/Quality/Areas/Authority/Views/UserList/Index.cshtml
+++ b/Quality/Quality/Areas/Authority/Views/UserList/Index.cshtml
@@ -830,7 +830,7 @@
 
             if (table[i][0]) {
 
-                var pos = table[i][3];//$("#position-" + i).val();
+                var pos = table[i][3];
                 var data = {
                     UserID: table[i][1],
                     Position: pos,
