ISP20210981 - User 回饋調整

--- a/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
@@ -1731,7 +1731,7 @@
                 }
 
                 content += "<td><img src='/Image/Icon/Delete.png' width='30' class='deleteDefectType' /></td>";
-                content += "<td><p>" + area2 + '-' + defectCategory + '-' + responsibility + '-' + bAAuditCriteriaID + "</p></td>";
+                content += "<td><p>" + area2 + '-' + defectType + '-' + responsibility + '-' + bAAuditCriteriaID + "</p></td>";
                 content += "<td class='display-None DefectValue' idi='" + rowCount + "'>";
                 content += "<p idx='DefectCategory' idv='" + defectCategoryID + "'>" + defectCategory + "</p>";
                 content += "<p idx='ADDDefectType' idv='" + defectTypeID + "'>" + defectType + "</p>";
