--- a/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
@@ -773,6 +773,8 @@
                         GetArtworkTypeIDList();
                         GetAccessoryRefNoList();
                     }
+
+                    ReportNoClear(name);
                 },
                 error: function (xhr, ajaxOptions, thrownError) {
                     console.log(xhr.responseText);
@@ -807,6 +809,8 @@
                         GetArtworkTypeIDList();
                         GetAccessoryRefNoList();
                     }
+
+                    ReportNoClear(name);
                 },
                 error: function (xhr, ajaxOptions, thrownError) {
                     console.log(xhr.responseText);
@@ -842,6 +846,8 @@
                         GetArtworkTypeIDList();
                         GetAccessoryRefNoList();
                     }
+
+                    ReportNoClear(name);
                 },
                 error: function (xhr, ajaxOptions, thrownError) {
                     console.log(xhr.responseText);
@@ -869,6 +875,8 @@
                         $("#" + name + "Article").val('');
                         msg.WithError('Article Not Found');
                     }
+
+                    ReportNoClear(name);
                 },
                 error: function (xhr, ajaxOptions, thrownError) {
                     console.log(xhr.responseText);
@@ -1275,22 +1283,32 @@
         GetArtworkTypeIDList();
         GetAccessoryRefNoList();
         ClearColor();
+        ReportNoClear(targetID);
     }
 
-    function GetSeasonList(data, targetID) {
+    function GetSeasonList(data, targetID) {        
         $('#' + targetID).val(data);
         GetArtworkTypeIDList();
         GetAccessoryRefNoList();
+        ReportNoClear(targetID);
     }
 
     function GetStyleList(data, targetID) {
         $('#' + targetID).val(data);
         GetArtworkTypeIDList();
         GetAccessoryRefNoList();
+        ReportNoClear(targetID);
     }
 
     function GetArticleList(data, targetID) {
         $('#' + targetID).val(data);
+        ReportNoClear(targetID);
+    }
+
+    function ReportNoClear(targetID) {
+        if (targetID.indexOf('Request_') > -1) {
+            $('#Request_ReportNo').html('');
+        }
     }
 
     function GetLocalSupp(data) {
