--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
@@ -53,6 +53,9 @@
             -webkit-box-sizing: border-box;
             -moz-box-sizing: border-box;
         }
+        #myEndlineMoisture_length > label > select{
+            background-color:white;
+        }
     </style>
 }
 @Html.Partial("~/Areas/FinalInspection/Views/Shared/_Inspection_Layout.cshtml")
