ISP20211275 -  調整Setting頁面錯誤

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -1080,8 +1080,9 @@
                     //tr.removeClass('shown');
                 }
                 else {
-                    row.child(format(row.data())).show();
-                    tr.addClass('shown');
+                    //row.child(format(row.data())).show();
+                    //tr.addClass('shown');
+                    $(this).click();
                 }
             });
 
