ISP20211356 - [Inspection] 修正bug

--- a/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
@@ -764,6 +764,7 @@
             keyValues = keyValues,
         });
 
+        keyValues.Add("Style#", "");
         keyValues.Add("SP#", "");
         Html.RenderPartial("SelectItem", new SelectItem_ViewModel()
         {
