ISP20211362 - IOS裝置不支援WebP圖片格式，改成Png

--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
@@ -445,7 +445,7 @@
     }
 
     function GetPicture(data) {
-        $('#WashTestBeforePicture').val(data.BeforePicture.replace("data:image/webp;base64,", ""));
-        $('#WashTestAfterPicture').val(data.AfterPicture.replace("data:image/webp;base64,", ""));
+        $('#WashTestBeforePicture').val(data.BeforePicture.replace("data:image/png;base64,", ""));
+        $('#WashTestAfterPicture').val(data.AfterPicture.replace("data:image/png;base64,", ""));
     }
 </script>
