--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
@@ -1008,7 +1008,7 @@
     }
 
     function GetPicture(data) {
-        $('#Crocking_Main_CrockingTestBeforePicture').val(data.BeforePicture.replace("data:image/webp;base64,", ""));
-        $('#Crocking_Main_CrockingTestAfterPicture').val(data.AfterPicture.replace("data:image/webp;base64,", ""));
+        $('#Crocking_Main_CrockingTestBeforePicture').val(data.BeforePicture.replace("data:image/png;base64,", ""));
+        $('#Crocking_Main_CrockingTestAfterPicture').val(data.AfterPicture.replace("data:image/png;base64,", ""));
     }
 </script>
