--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -897,8 +897,8 @@
     }
     
     function GetPicture(data) {
-        $('#Heat_Main_HeatTestBeforePicture').val(data.BeforePicture.replace("data:image/webp;base64,", ""));
-        $('#Heat_Main_HeatTestAfterPicture').val(data.AfterPicture.replace("data:image/webp;base64,", ""));
+        $('#Heat_Main_HeatTestBeforePicture').val(data.BeforePicture.replace("data:image/png;base64,", ""));
+        $('#Heat_Main_HeatTestAfterPicture').val(data.AfterPicture.replace("data:image/png;base64,", ""));
     }
 
     function QtyCheck(value) {
