--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
@@ -1047,8 +1047,8 @@
     }
 
     function GetPicture(data) {
-        $('#Main_TestBeforePicture').val(data.BeforePicture.replace("data:image/webp;base64,", ""));
-        $('#Main_TestAfterPicture').val(data.AfterPicture.replace("data:image/webp;base64,", ""));
+        $('#Main_TestBeforePicture').val(data.BeforePicture.replace("data:image/png;base64,", ""));
+        $('#Main_TestAfterPicture').val(data.AfterPicture.replace("data:image/png;base64,", ""));
     }
 
     function OvenGroupCheck(value) {
