--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -1256,7 +1256,7 @@
     }
 
     function GetPicture(data) {
-        $('#Detail_TestBeforePicture').val(data.BeforePicture.replace("data:image/webp;base64,", ""));
-        $('#Detail_TestAfterPicture').val(data.AfterPicture.replace("data:image/webp;base64,", ""));
+        $('#Detail_TestBeforePicture').val(data.BeforePicture.replace("data:image/png;base64,", ""));
+        $('#Detail_TestAfterPicture').val(data.AfterPicture.replace("data:image/png;base64,", ""));
     }
 </script>
