--- a/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
@@ -1467,8 +1467,8 @@
     }
 
     function GetPicture(data) {
-        $('#TestBeforePicture').val(data.BeforePicture.replace("data:image/webp;base64,", ""));
-        $('#TestAfterPicture').val(data.AfterPicture.replace("data:image/webp;base64,", ""));
+        $('#TestBeforePicture').val(data.BeforePicture.replace("data:image/png;base64,", ""));
+        $('#TestAfterPicture').val(data.AfterPicture.replace("data:image/png;base64,", ""));
     }
 
     function FailMail() {
