--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
@@ -247,7 +247,7 @@
 
             var Ukey = Data.DetailUkey;
             var RowIndex = Data.RowIndex;
-            var Picture = Data.Img.replace("data:image/webp;base64,", "");
+            var Picture = Data.Img.replace("data:image/png;base64,", "");
 
             var data =
             {
