--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
@@ -161,7 +161,7 @@
         //透過AJAX暫存成Temp Data
 
         var FinalInspectionID = Data.FinalInspectionID;
-        var Picture = Data.Img.replace("data:image/webp;base64,", "");
+        var Picture = Data.Img.replace("data:image/png;base64,", "");
 
         var data =
         {
