--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
@@ -445,7 +445,7 @@
     }
 
     function GetPicture(data) {
-        $('#OvenTestBeforePicture').val(data.BeforePicture.replace("data:image/webp;base64,", ""));
-        $('#OvenTestAfterPicture').val(data.AfterPicture.replace("data:image/webp;base64,", ""));
+        $('#OvenTestBeforePicture').val(data.BeforePicture.replace("data:image/png;base64,", ""));
+        $('#OvenTestAfterPicture').val(data.AfterPicture.replace("data:image/png;base64,", ""));
     }
 </script>
