--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/WashTest.cshtml
@@ -1051,8 +1051,8 @@
     }
 
     function GetPicture(data) {
-        $('#Wash_Main_WashTestBeforePicture').val(data.BeforePicture.replace("data:image/webp;base64,", ""));
-        $('#Wash_Main_WashTestAfterPicture').val(data.AfterPicture.replace("data:image/webp;base64,", ""));
+        $('#Wash_Main_WashTestBeforePicture').val(data.BeforePicture.replace("data:image/png;base64,", ""));
+        $('#Wash_Main_WashTestAfterPicture').val(data.AfterPicture.replace("data:image/png;base64,", ""));
     }
 
     function QtyCheck(value) {
