--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/FinalInspection_Picture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/FinalInspection_Picture.cshtml
@@ -11,7 +11,7 @@
 {
     //var Image = item is null ? new byte[1] : item;
     var base64 = Convert.ToBase64String(item);
-    var imgSrc = String.Format("data:image/webp;base64,{0}", base64);
+    var imgSrc = String.Format("data:image/png;base64,{0}", base64);
     <img id="Img_@idx" style="width:95vw;float:left;margin-bottom:5px;" src="@imgSrc" />
 
     idx++;
