--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionDefectList/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionDefectList/Index.cshtml
@@ -108,7 +108,7 @@
                                         @if (item.DefectPicture != null)
                                         {
                                             var base64 = Convert.ToBase64String(item.DefectPicture);
-                                            var imgSrc = String.Format("data:image/webp;base64,{0}", base64);
+                                            var imgSrc = String.Format("data:image/png;base64,{0}", base64);
                                             <div class="zoom-gallery">
                                                 <a href="@imgSrc" data-source="" style="width:640px;height:480px;">
                                                     <img width="30" src="@imgSrc" />
