--- a/Quality/Quality/Views/Shared/ScreenShot.cshtml
+++ b/Quality/Quality/Views/Shared/ScreenShot.cshtml
@@ -56,9 +56,9 @@
             canvas.width = videoElement.videoWidth;
             canvas.height = videoElement.videoHeight;
             canvas.getContext("2d").drawImage(videoElement, 0, 0);
-            debugger
+            
             // Other browsers will fall back to image/png
-            var src = canvas.toDataURL("image/webp");
+            var src = canvas.toDataURL("image/png");
             if (src.length > 6) {
                 img.src = src;
                 imgSet.src = src;
