ISP20211364 - Fabric Color Fastness名稱改成Washing Fastness

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Index.cshtml
@@ -105,11 +105,11 @@
 <div class="main-content">
     <header class="page-header">
         <h3>
-            <i class="icon-users"></i><span>Fabric Color Fastness</span>
+            <i class="icon-users"></i><span>Washing Fastness</span>
         </h3>
         <div class="breadcrumb">
             <div>Home</div>
-            <div class="current">Fabric Color Fastness</div>
+            <div class="current">Washing Fastness</div>
         </div>
     </header>
 
