--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -206,7 +206,7 @@
                                                 case string a when a.Contains("Fabric Oven Test"):
                                                     link = Url.Action("IndexBack", "FabricOvenTest", new { POID = item.OrderID });
                                                     break;
-                                                case string a when a.Contains("Fabric Color Fastness"):
+                                                case string a when a.Contains("Washing Fastness"):
                                                     link = Url.Action("IndexBack", "FabricColorFastness", new { POID = item.OrderID });
                                                     break;
                                                 case string a when a.Contains("Accessory Oven Test & Wash"):
