--- a/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
@@ -97,11 +97,11 @@
 <div class="main-content">
     <header class="page-header">
         <h3>
-            <i class="icon-users"></i><span>Fabric Color Fastness</span>
+            <i class="icon-users"></i><span>Washing Fastness</span>
         </h3>
         <div class="breadcrumb">
             <div>Home</div>
-            <div>Fabric Color Fastness</div>
+            <div>Washing Fastness</div>
             <div class="current">Detail</div>
         </div>
     </header>
